[project]
name = "whenever-sqlalchemy"
version = "0.1.0b2"
authors = [
    {name = "Arie Bovenberg", email = "a.c.bovenberg@gmail.com"},
]
maintainers = [
    {name = "Arie Bovenberg", email = "a.c.bovenberg@gmail.com"},
]
readme = "README.md"
license = "MIT"
description = "SQLAlchemy column types for the whenever datetime library"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Typing :: Typed",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "whenever>=0.10.0b1",
    "sqlalchemy>=1.4",
]
keywords = ["whenever", "sqlalchemy", "datetime", "date", "time", "orm"]

[project.urls]
Repository = "https://github.com/ariebovenberg/whenever-sqlalchemy"
Issues = "https://github.com/ariebovenberg/whenever-sqlalchemy/issues"
Changelog = "https://github.com/ariebovenberg/whenever/blob/main/whenever-sqlalchemy/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7,<9",
    "pytest-cov>=7,<8",
    "black>=25,<26",
    "isort>=6,<7",
    "flake8>=6,<8",
    "mypy>=1.19,<1.20",
    "build",
    "twine>=6.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
include = '\.pyi?$'

[tool.isort]
profile = 'black'
line_length = 79
combine_as_imports = true

[tool.mypy]
warn_unused_ignores = true
strict = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disable_error_code = ["no-untyped-def"]
check_untyped_defs = false
